working arrow integration