@@ -30,6 +30,19 @@
 
   ;;:jvm-opts     ["-javaagent:resources/jmx_prometheus_javaagent-0.20.0.jar=8080:resources/jmx.yaml"]
 
+  :jvm-opts
+  ["--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED"
+   "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+   "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
+   "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
+   "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED"
+   "--add-opens=java.base/java.lang=ALL-UNNAMED"
+   "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+   "--add-opens=java.base/java.io=ALL-UNNAMED"
+   "--add-opens=java.base/java.util=ALL-UNNAMED"
+   "--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"
+   "--enable-native-access=ALL-UNNAMED"]
+
   :profiles
   {:dev     {:dependencies [[clj-test-containers "0.7.4"]]}
 
